<resources>
    <string name="app_name">心听</string>
    <string name="camera_string">\t\t拍照</string>
    <string name="album_string">\t\t从相册中选择照片\t</string>
    <string name="cancel_string">\t\t取消</string>
    <string name="string_friend">联系人</string>
    <string name="string_message">消息</string>
    <string name="string_information">个人信息</string>
    <string name="string_init_face">录入人脸</string>
    <string name="string_delete_face">删除人脸</string>
    <string name="string_setting">设置</string>
    <string name="string_gesture_analyze">手势识别</string>
    <string name="string_speak_gesture">语音转手势</string>
    <string name="string_search">搜索</string>
    <string name="string_add">添加</string>
    <string name="string_not_find">没有找到该用户</string>
    <string name="string_new_friend">新朋友</string>
    <string name="string_new_group">群通知</string>
    <string name="string_no_friend">尚未添加任何好友</string>
    <string name="string_my_friend">我的好友</string>
    <string name="string_add_group">加群</string>
    <string name="string_add_friend">加好友</string>
    <string name="string_no_request">暂无任何好友申请</string>
    <string name="string_agree">同意</string>
    <string name="string_reject">拒绝</string>
    <string name="string_sound_alarm">声音报警</string>
    <string name="string_eyes_saying">可视化交流</string>
    <string name="string_change_password">修改密码</string>
    <string name="string_home_mode">居家模式</string>
    <string name="string_about_us">关于我们</string>
    <string name="string_exit_login">退出登录</string>
    <string name="string_send_message">发消息</string>
    <string name="string_delete_friend">删除好友</string>
    <string name="string_sex">性别</string>
    <string name="string_submit_change">提交修改</string>
    <string name="string_username">用户名</string>
    <string name="string_ID">ID</string>
    <string name="string_head_image">头像</string>
    <string name="string_password">密码</string>
    <string name="string_password_again">确认密码</string>
    <string name="string_login">登录</string>
    <string name="string_remember_password">记住密码</string>
    <string name="string_login_face">人脸登录</string>
    <string name="string_register_username">注册账号</string>
    <string name="string_man">男</string>
    <string name="string_woman">女</string>
    <string name="string_register">注册</string>
    <string name="string_replace_password">修改密码</string>
    <string name="string_old_password">旧密码</string>
    <string name="string_new_password">新密码</string>
    <string name="string_new_password_again">确认新密码</string>
    <string name="string_submit_change">提交修改</string>
</resources>