<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:id="@+id/group1">
        <item
            android:id="@+id/action_personal_info"
            android:icon="@drawable/ic_vector_information"
            android:title="@string/string_information" />
    </group>

    <group
        android:id="@+id/group2">
        <item
            android:id="@+id/action_personal_face"
            android:icon="@drawable/ic_vector_face"
            android:title="@string/string_init_face" />
    </group>

    <group
        android:id="@+id/group3">
        <item
            android:id="@+id/action_personal_delete"
            android:icon="@drawable/ic_vector_delete"
            android:title="@string/string_delete_face" />
    </group>

    <group
        android:id="@+id/group5">
        <item
            android:id="@+id/action_gesture_analyze"
            android:icon="@drawable/ic_vector_gesture"
            android:title="@string/string_gesture_analyze"/>
    </group>
    <group
        android:id="@+id/gruop6">
        <item
            android:id="@+id/action_speak_gesture"
            android:icon="@drawable/ic_speak"
            android:title="@string/string_speak_gesture"/>
    </group>
    <group
        android:id="@+id/group4">
        <item
            android:id="@+id/action_personal_setting"
            android:icon="@drawable/ic_vector_settings"
            android:title="@string/string_setting" />
    </group>

</menu>