<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginTop="?android:attr/actionBarSize"
    tools:context=".fragment.FriendFragment">

    <FrameLayout
        android:id="@+id/new_friend_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:background="?attr/selectableItemBackground"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/string_new_friend"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:layout_marginStart="20dp"
            android:layout_gravity="start|center"
            android:gravity="center"
            />
        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="end"
            app:srcCompat="@drawable/ic_next" />
    </FrameLayout>

    <FrameLayout
        android:id="@+id/new_group_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:background="?attr/selectableItemBackground"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/new_friend_layout">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/string_new_group"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:layout_marginStart="20dp"
            android:layout_gravity="start|center"
            android:gravity="center"
            />
        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="end"
            app:srcCompat="@drawable/ic_next" />
    </FrameLayout>

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:background="@color/gray_shallow"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/new_group_layout"
        />

    <FrameLayout
        android:id="@+id/my_friend_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/string_my_friend"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:layout_marginStart="20dp"
            android:layout_gravity="start|center"
            android:gravity="center"
            />
        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="end"
            app:srcCompat="@drawable/ic_down" />
    </FrameLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/friend_recycler"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/my_friend_layout"
        />

    <TextView
        android:id="@+id/no_friend_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/string_no_friend"
        android:textSize="18sp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.25" />

</androidx.constraintlayout.widget.ConstraintLayout>