<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.FriendInfoActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/friend_head_layout"
        android:layout_width="match_parent"
        android:layout_height="265dp"
        android:background="@drawable/bg_4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/friend_head_image"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_marginStart="24dp"
            android:layout_marginBottom="8dp"
            android:src="@drawable/ic_head_image"
            android:transitionName="friend_head_image"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0" />

        <TextView
            android:id="@+id/friend_username_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            android:transitionName="friend_username_text"
            app:layout_constraintBottom_toBottomOf="@+id/friend_head_image"
            app:layout_constraintStart_toEndOf="@+id/friend_head_image"
            app:layout_constraintTop_toTopOf="@+id/friend_head_image"
            app:layout_constraintVertical_bias="0.6"
            tools:text="zzp666" />

        <TextView
            android:id="@+id/sex_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/string_sex"
            android:textSize="18sp"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="@+id/friend_head_image"
            app:layout_constraintStart_toEndOf="@+id/friend_head_image"
            app:layout_constraintTop_toBottomOf="@+id/friend_username_text" />

        <TextView
            android:id="@+id/friend_sex_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:textSize="18sp"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="@+id/sex_text_view"
            app:layout_constraintStart_toEndOf="@+id/sex_text_view"
            app:layout_constraintTop_toTopOf="@+id/sex_text_view"
            tools:text="男" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/send_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:padding="12dp"
        android:text="@string/string_send_message"
        android:textSize="16sp"
        app:cornerRadius="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline"
        app:layout_constraintVertical_bias="0.45" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/delete_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:padding="12dp"
        android:textSize="16sp"
        android:text="@string/string_delete_friend"
        app:backgroundTint="@color/light_red"
        app:rippleColor="#FFB5C5"
        app:cornerRadius="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline"
        app:layout_constraintVertical_bias="0.7" />
</androidx.constraintlayout.widget.ConstraintLayout>